fix: add font legibility

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -60,6 +60,7 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 body.lock {
